--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.1",
     "@radix-ui/react-avatar": "^1.0.3",
+    "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-dropdown-menu": "^2.0.5",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
@@ -53,6 +54,7 @@
     "tailwindcss-animate": "^1.0.7",
     "tough-cookie": "^4.1.3",
     "typescript": "5.2.2",
+    "vaul": "^0.6.1",
     "zod": "^3.21.4"
   },
   "devDependencies": {
